--- a/.github/workflows/main_portofolio-ku.yml
+++ b/.github/workflows/main_portofolio-ku.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read   # Required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +22,16 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install npm dependencies and build frontend
+        run: |
+          npm install
+          npm run build
 
       - name: Check if composer.json exists
         id: check_files
@@ -34,7 +44,7 @@ jobs:
         run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip . -x "node_modules/*" ".git/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -45,10 +55,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write   # Required for requesting the JWT
+      contents: read    # Required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -58,19 +67,18 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_09252CF4FB6F4F1CAE315357F33C3D54 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C7E650F460D1436D882EE910E36A9EC4 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C9E55C7E7C25468D82ED4433A38E06E0 }}
+          client-id:      ${{ secrets.AZUREAPPSERVICE_CLIENTID_09252CF4FB6F4F1CAE315357F33C3D54 }}
+          tenant-id:      ${{ secrets.AZUREAPPSERVICE_TENANTID_C7E650F460D1436D882EE910E36A9EC4 }}
+          subscription-id:${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C9E55C7E7C25468D82ED4433A38E06E0 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'Portofolio-ku'
           slot-name: 'Production'
           package: .
-          
